Add more shortcut keys

--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
                 case 'Digit8':
                     increment(8);
                     break;
+
+		case 'KeyZ':
+                    increment(8);
+                    break;
+
+		case 'KeyA':
+                    incrementOne();
+                    break;
+		case 'KeyQ':
+                    incrementTwo();
+                    break;
                 default:
                     break;
             }
