Add shortcut for reset

--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
 		case 'KeyQ':
                     incrementTwo();
                     break;
+		case 'KeyL': //reset all
+                    reset();
+		    resetOne();
+		    resetTwo();
+			
+                    break;
                 default:
                     break;
             }
