--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             background-color: #f8f8f8; 
             color: #25313e;
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 50px;
             padding: 0;
             display: flex;
             justify-content: center;
