--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             background-color: #f8f8f8; 
             color: #25313e;
             font-family: Arial, sans-serif;
-            margin: 50px;
-            padding: 0;
+            margin: 0;
+            padding: 50px;
             display: flex;
             justify-content: center;
             align-items: center;
