--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Tracker</title>
     <style>
         body {
             background-color: #f8f8f8; 
             color: #25313e;
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 50px;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
