--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
             </div>
             
         </div>
+	<div style="justify-content: center; align-items: center; font-size: 12px;">
+		<div>Shortcuts: 
+			Keys 1-8: increment 1-8|
+			Key Q: increment 1|
+			Key A: increment 1|
+			Key Z: increment 8|
+			Key L: reset all|
+		</div>
+		
+	</div>
     </div>
 
     <script>
