--- a/index.html
+++ b/index.html
@@ -4,55 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tracker</title>
-    <style>
-        body {
-            background-color: #f8f8f8; 
-            color: #25313e;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center; 
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .button-group {
-            margin: 10px 0;
-        }
-        button {
-            margin: 5px;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            cursor: pointer;
-        }
-        .increment-button {
-            background-color: #73c991; 
-            color: white;
-        }
-        .decrement-button {
-            background-color: #9f4c4c; 
-            color: white;
-        }
-        .reset-button {
-            background-color: #4d4d4d; 
-            color: white;
-        }
-        .display {
-            margin-top: 20px;
-            font-size: 32px;
-            font-weight: bold;
-        }
-        .section {
-            margin-top: 40px;
-        }
-    </style>
+    <style src="styles.css"></style>
 </head>
 <body>
     <div class="container">
