--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 	<div style="justify-content: center; align-items: center; font-size: 12px;">
 		<div>Shortcuts: 
 			Keys 1-8: increment 1-8|
+			Key 0: reset all|
 			Key Q: increment 1|
 			Key A: increment 1|
 			Key Z: increment 8|
-			Key L: reset all|
+			
 		</div>
 		
 	</div>
