--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			Key 0: reset all|
 			Key Q: increment 1|
 			Key A: increment 1|
-			Key Z: increment 8|
+			Key Z: increment 8
 			
 		</div>
 		
