--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </div>
 	<div style="justify-content: center; align-items: center; font-size: 12px;">
 		<div>Shortcuts: 
-			Keys 1-8: increment 1-8|
+			Keys 1-8: add 1-8 to 1st counter|
 			Key 0: reset all|
-			Key Q: increment 1|
-			Key A: increment 1|
-			Key Z: increment 8
+			Key Q: add 1 to 3rd counter|
+			Key A: add 1 to 2nd counter|
+			Key Z: add 8 to 1st counter
 			
 		</div>
 		
