--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<div id="notification"></div>
     <div class="container">
         <!-- Main Section -->
           <div class="display" id="displayText">0</div>
