--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<div style="display: flex; justify-content: center; align-items: center;">
 	<div id="notification" >+N!</div>
     <div class="container">
         <!-- Main Section -->
@@ -70,6 +71,7 @@
 		
 	</div>
     </div>
+		</div>
 
     <script src="index.js"></script>
 </body>
