--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div style="display: flex; justify-content: center; align-items: center;">
+	<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
 	<div id="notification" >+N!</div>
     <div class="container">
         <!-- Main Section -->
