--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <!-- Section 1 -->
         <div class="section">
+		<div id="notification2" >+N!</div>
             <div class="display" id="displayTextOne">0</div>
            <button class="reset-button" onclick="resetOne()">Reset</button>
            
@@ -50,6 +51,7 @@
 
         <!-- Section 2 -->
         <div class="section">
+		<div id="notification3" >+N!</div>
            <div class="display" id="displayTextTwo">0</div>
            <button class="reset-button" onclick="resetTwo()">Reset</button>
             
