--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        
 
         <!-- Section 1 -->
-        <div class="section">
+        <div class="section" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
 		<div id="notification2" >+N!</div>
             <div class="display" id="displayTextOne">0</div>
            <button class="reset-button" onclick="resetOne()">Reset</button>
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Section 2 -->
-        <div class="section">
+        <div class="section" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
 		<div id="notification3" >+N!</div>
            <div class="display" id="displayTextTwo">0</div>
            <button class="reset-button" onclick="resetTwo()">Reset</button>
