--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 		<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-	<div id="notification" >+N!</div>
+	<div class="notif" id="notification" >+N!</div>
     <div class="container">
         <!-- Main Section -->
           <div class="display" id="displayText">0</div>
@@ -38,7 +38,7 @@
 
         <!-- Section 1 -->
         <div class="section" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-		<div id="notification2" >+N!</div>
+		<div class= "notif" id="notification2" >+N!</div>
             <div class="display" id="displayTextOne">0</div>
            <button class="reset-button" onclick="resetOne()">Reset</button>
            
@@ -51,7 +51,7 @@
 
         <!-- Section 2 -->
         <div class="section" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-		<div id="notification3" >+N!</div>
+		<div class="notif" id="notification3" >+N!</div>
            <div class="display" id="displayTextTwo">0</div>
            <button class="reset-button" onclick="resetTwo()">Reset</button>
             
@@ -74,6 +74,8 @@
 	</div>
     </div>
 		</div>
+
+
     <script src="index.js"></script>
 </body>
 </html>
